# discord-bot-tools

./: .gitignore  Cargo.toml  README.md  config-example.json
src/: main.rs
src/commands/: channels.rs  dice.rs  mod.rs
