[package]
authors = ["discord-bot-tools"]
edition = "2018"
name = "discord-bot-tools"
version = "0.1.0"

[dependencies]
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
